# hyperspot

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: e2e.yml  release-plz.yml
config/: mini-chat.yaml
docs/: MODKIT_PLUGINS.md  MODKIT_UNIFIED_SYSTEM.md  ODATA_SELECT.md  SECURE-ORM.md  adr_format.md  playful-shimmying-waterfall.md
docs/adrs/modkit/: 0003-modkit-universal-lazy-layer.md
docs/arch/authorization/: DESIGN.md
docs/arch/cyberfabric/ADR/: 0001-cpt-cf-adr-deployment-profiles.md
docs/arch/errors/: DESIGN.md
docs/arch/errors/categories/: 01-cancelled.md
docs/arch/modkit/: DESIGN.md  PRD.md
docs/arch/modkit/ADR/: 0002-cpt-cf-adr-auth-edge-only.md  0003-cpt-cf-adr-rest-first-oop.md  0004-cpt-cf-adr-rest-client-generation.md  0005-cpt-cf-adr-gateway-abstraction.md  0006-cpt-cf-adr-helm-chart-organization.md  0007-cpt-cf-adr-eventual-readiness.md  0008-cpt-cf-adr-internal-module-auth.md
docs/security/: SECURITY.md
guidelines/: DEPENDENCIES.md  NEW_MODULE.md
libs/modkit/: Cargo.toml
libs/modkit-contract/: Cargo.toml
libs/modkit-contract-macros/: Cargo.toml
libs/modkit-contract-macros/src/: codegen.rs  lib.rs  model.rs  parse.rs
libs/modkit-contract/src/: descriptor.rs  lib.rs
libs/modkit-contract/src/http/: dispatch.rs
libs/modkit-contract/src/ir/: binding.rs  contract.rs  mod.rs  validation.rs
libs/modkit-db/src/: advisory_locks.rs  lib.rs
libs/modkit-db/tests/sqlite/: sqlite_tests.rs
libs/modkit-security/src/: context.rs
libs/modkit-service-hub/: Cargo.toml
libs/modkit-service-hub-macros/: Cargo.toml
libs/modkit-service-hub-macros/src/: codegen.rs  lib.rs  model.rs  parse.rs
libs/modkit-service-hub/src/: contract_trait.rs  descriptor.rs  error.rs  factory.rs  hub.rs  lib.rs  policy.rs  resolver.rs  transport.rs
libs/modkit-service-hub/src/http/: dispatch.rs  mod.rs
libs/modkit-service-hub/src/ir/: binding.rs  contract.rs  mod.rs  validation.rs
libs/modkit-utils/src/: lib.rs  sync.rs
libs/modkit/src/: client_hub.rs  directory.rs  lib.rs  lifecycle.rs
libs/modkit/src/backends/: local.rs
libs/modkit/src/plugins/: mod.rs
libs/modkit/src/runtime/: grpc_installers.rs  module_manager.rs
modules/licensing-service/docs/: DESIGN.md  PRD.md
modules/licensing-service/docs/ADR/: 0001-cpt-cf-licensing-service-adr-federated-licensing-authority.md
modules/mini-chat/docs/: DESIGN.md  PRD.md  openapi.json
modules/mini-chat/docs/ADR/: 0001-cpt-cf-mini-chat-adr-llm-provider-as-library.md  0002-cpt-cf-mini-chat-adr-internal-transport.md
modules/mini-chat/docs/features/: outbox-pattern.md
modules/mini-chat/mini-chat/: Cargo.toml
modules/mini-chat/mini-chat/src/: config.rs  module.rs
modules/quota-service/docs/: PRD.md
modules/service-hub-demo/service-hub-demo/: Cargo.toml
modules/service-hub-demo/service-hub-demo-sdk/: Cargo.toml
modules/service-hub-demo/service-hub-demo-sdk/src/: contract.rs  error.rs  lib.rs  models.rs
modules/service-hub-demo/service-hub-demo/src/: binding.rs  config.rs  lib.rs  module.rs
modules/service-hub-demo/service-hub-demo/src/api/: mod.rs
modules/service-hub-demo/service-hub-demo/src/api/rest/: handlers.rs  routes.rs
modules/service-hub-demo/service-hub-demo/src/client/: factory.rs  local.rs  mod.rs  remote.rs
modules/service-hub-demo/service-hub-demo/src/domain/: service.rs
modules/service-hub-demo/service-hub-demo/tests/: integration.rs
modules/system/account-management/docs/: DESIGN.md
modules/system/api-gateway/: Cargo.toml
modules/system/api-gateway/src/: module.rs
modules/system/authn-resolver/: LOGIN_SERVICE_SOCIAL_AUTH_DESIGN.md  MULTI_PLUGIN_SELECTION_DESIGN.md
modules/system/grpc-hub/: Cargo.toml
modules/system/grpc-hub/src/: module.rs
modules/system/module-orchestrator/: Cargo.toml
modules/system/secrets-engine/docs/: adr.MD
scripts/: coverage.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+64 files in other folders)
