[package]
name = "cf-modkit-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ModKit contract IR, binding metadata, validation, and proc-macro re-exports"
rust-version.workspace = true

[lib]
name = "modkit_contract"

[lints]
workspace = true

[dependencies]
modkit-contract-macros.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
http.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
