[package]
name = "cf-service-hub-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Service hub demo module — PaymentService with local and HTTP transport"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
service-hub-demo-sdk.workspace = true
modkit-service-hub.workspace = true
modkit.workspace = true
modkit-canonical-errors.workspace = true
modkit-security.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
uuid.workspace = true
anyhow.workspace = true
futures-core.workspace = true
async-stream = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
futures-util.workspace = true
